2007-11-07  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/cluttermm.h: Add the rest of the headers created so far to the m
	ain cluttermm.h include file
	* configure.in: removed an example makefile from AC_OUTPUT since it no
	longer exists

2007-11-07  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/box.hg: I think the HBox and VBox classes should be used by
	RefPtr, so I added create() functions and made their constructors private

2007-11-07  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: bump the version to 0.5.0 to try to avoid confusion with
	people assuming that they can use it with clutter <= 0.3.  There's currently
	a lot fo 0.5/0.6 clutter API wrapped in cluttermm, and this version change
	hopefully makes that more clear

2007-11-07  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/timeline.ccg:
	* clutter/src/timeline.hg: Added initial wrapper for Timeline

2007-11-07  Murray Cumming  <murrayc@murrayc.com>

	* clutter/cluttermm/Makefile.am:
	* clutter/cluttermm/types.h: Added this file. 
	So far it just contains the Unit typedef.
	* clutter/src/container.hg:
	* clutter/src/layout.hg:
	* clutter/src/texture.hg:
	* tools/m4/convert_cluttermm.m4: Use Unit instead 
	of ClutterUnit in our API.
	* clutter/src/margin.ccg:
	* clutter/src/margin.hg: Use _MEMBER_GET() and 
	_MEMBER_SET() instead of hand-coding these.

2007-11-07  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/clutter_vfuncs.defs:
	* clutter/src/entry.ccg:
	* clutter/src/entry.hg: Add wrapper for Entry class

2007-11-07  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/rectangle.ccg:
	* clutter/src/rectangle.hg:
	* clutter/src/texture.ccg:
	* clutter/src/texture.hg: use _WRAP_CTOR instead of doing hand-coded
	constructors for Rectangle and Texture.

2007-11-07  Jonathon Jongsma  <jjongsma@gnome.org>
