@@ -22,14 +22,16 @@
 #include <glibmm/ustring.h>
 #include <cluttermmconfig.h> //For LIBCLUTTERMM_VERSION
 #include <cluttermm/wrap_init.h>
+#include <clutter/clutter.h>
 
 namespace Clutter
 {
 
-void init(const Glib::ustring& app_id, const Glib::ustring& version, int nargs, gchar *args[])
+void init(int* nargs, gchar **args[])
 {
   Glib::init(); //Sets up the g type system and the Glib::wrap() table.
   wrap_init(); //Tells the Glib::wrap() table about the libcluttermm classes.
+  clutter_init(nargs, args);
 }
 
 } //namespace Clutter
