@@ -2,4 +2,7 @@ SUBDIRS =
 
 #EXTRA_DIST	=  Makefile.am_fragment README.txt
 
+include Makefile.am_fragment
 
+noinst_PROGRAMS = boxes
+boxes_SOURCES = test-boxes.cc
